-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 290103) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

??012003 (v2.2.1)  -** stable release **-
	- added: sane default param hints for chainops: -ec, -etd,
		 -ete, -etf, -etl, -etm, -etp, -etr and -epp
	- added: if configured with JACK-support, ecasound will
	  	 fetch the correct bufsize and srate parameters from 
		 the JACK server when connecting a chainsetup with 
	 	 JACK inputs or outputs
	- changed: ecasoundrc - ladspa-plugin-directory can contain 
		   multiple directories, separated by colons; this
		   change was done to avoid any confusion with 
	  	   the LADSPA_PATH syntax and ecasoundrc
	- fixed: compiling pyecasound failed on alpha w/ gcc-3.2
	- fixed: -t:xxx option did not work if chainsetup samplerate
		 differed from the default; for instance rate change
		 from 44100 to 22050 doubled the run length
	- fixed: make uninstall in kvutils failed if non-identified
	 	 files from old releases were detected
	- fixed: excessive dbc warnings when using the jack plugin
	- fixed: core dump if -eac:x,y was given an invalid channel 
		 index
	- fixed: compile failed if JACK support was enabled, but no
		 explicit --with-jack option was given
	- fixed: rounding errors fixed in the resample object
09012003 (v2.2.0)  -** stable release **-
	- edi-entries: edi-1 closed
	- changed: ecasound.el updated to version 0.8.1 [mlang]