@@ -102,6 +102,13 @@ Ecasound specific options
 	By default JACK support is enabled if all the 
 	necessary header and library files are found.
 
+`--disable-libsamplerate'
+	Don't compile libsamplerate support. See 
+	http://www.mega-nerd.com/SRC for more info about 
+	libsamplerate. By default libsamplerate support is 
+	enabled if all the necessary header and library files 
+	are found.
+
 `--disable-ncurses'
 	Don't link against ncurses (known bug: even if this is 
 	specified, you're still required to have a working
@@ -122,6 +129,10 @@ Ecasound specific options
 `--with-jack=JACK_PREFIX'
 	Enable JACK support and compile against JACK installed
 	in 'JACK_PREFIX'.
+
+`--with-libsamplerate=LIBSAMPLERATE_PREFIX'
+	Enable libsamplerate support and compile against libsamplerate 
+	installed in 'LIBSAMPLERATE_PREFIX'.
 
 `--with-largefile'
 	Compile with support for large files (>2GB). Disabled
