@@ -6,6 +6,6 @@
 
 const long int ecasound_library_version_current = LIBECASOUND_VERSION;
 const long int ecasound_library_version_revision = 0;
-const long int ecasound_library_version_age = 0;
+const long int ecasound_library_version_age = LIBECASOUND_VERSION_AGE;
 
 const char* ecasound_library_version = VERSION;
